package com.publicissapient.tondeuse.domain.Configuration;

public class ConfigurationException extends Exception {

    public ConfigurationException(String message, Throwable cause){
        super(message,cause);
    }

}
