package com.publicissapient.tondeuse.domain;

import lombok.ToString;

/**
 * set of instruction currently supported by mowners
 */
@ToString
public enum Instruction {
    D,G,A
}
