package com.publicissapient.tondeuse.domain;

import lombok.ToString;

/**
 * set of orientation currently supported by mowners. Note : up and down are not supported yet....
 */
@ToString
public enum Orientation {
    N,E,W,S;

}
